# NumericalMethods

./: .gitignore
Coursework/: graph.m  text.tex
Lab1/: graph.m  lab1.tex  lab_fzero.m  text.tex
Lab2/: graph.m  lab2.tex
Lab3/: CfromA.m  alpha.m  graph.m  lab3.tex  labNorm.m
Lab4/: eigVector.m  graph.m  lab4.tex
Lab5/: Lab5.tex  graph.m
Lab7/: graph.m  lab7.tex
src/: CMakeLists.txt  matrix.cpp  matrix.h
src/course/: CMakeLists.txt  main.cpp
src/lab1/: CMakeLists.txt  main.c  main.cpp
src/lab2/: CMakeLists.txt  main.cpp
src/lab3/: CMakeLists.txt  main.c  main.cpp
src/lab4/: CMakeLists.txt  main.cpp
src/lab5/: CMakeLists.txt  main.cpp
src/lab7/: CMakeLists.txt  main.cpp
